[package]
name = "pchain-types"
version = "0.5.0"
authors = ["ParallelChain Lab <info@parallelchain.io>"]
edition = "2018"
description = "Data types defined in the ParallelChain Protocol"
license = "Apache-2.0"
repository = "https://github.com/parallelchain-io/pchain-types-rust"
keywords = ["blockchain", "parallelchain", "crypto", "library"]
categories = ["cryptography::cryptocurrencies"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dev-dependencies]
hex = "0.4.3"
rand = "0.7"

[dependencies]
borsh = "=0.10.2"
ed25519-dalek = "1.0.1"
ethbloom = "0.13"
hotstuff_rs = { version = "0.2", git = "https://github.com/parallelchain-io/hotstuff_rs" }
rs_merkle = "1.1"
sha2 = "0.10"
