[package]
name = "pchain-types"
version = "0.5.0"
authors = ["ParallelChain Lab <info@parallelchain.io>"]
edition = "2018"
description = "Data types defined in the ParallelChain Protocol"
license = "Apache-2.0"
repository = "https://github.com/parallelchain-io/pchain-types-rust"
keywords = ["blockchain", "parallelchain", "crypto", "library"]
categories = ["cryptography::cryptocurrencies"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dev-dependencies]
ed25519-dalek = { version ="2.0.0", features = ["rand_core"] }
rand = "0.8"

[dependencies]
borsh = "0.10.2"
ed25519-dalek = "2.0"
ethbloom = "0.13"
hotstuff_rs = "0.3"
rs_merkle = "1.1"
serde = { version = "1.0.192", optional = true }
sha2 = "0.10"

[features]
rand_core = ["ed25519-dalek/rand_core"]
serde = ["serde/serde_derive" ]